Edited index.html with basic info

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Nick Carter, GVSU Cybersecurity Graduate Student</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi, I'm Nick Carter!</h1>
+				<p>I'm a graduate student majoring in Cybersecurity in the GVSU College of Computing.</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="https://www.linkedin.com/in/nicholascartergv/">LinkedIn</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
