fixed title in index.html

--- a/index.html
+++ b/index.html
@@ -1,27 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Nick Carter, GVSU Cybersecurity Graduate Student</title>
-        <!-- link to main stylesheet-->
-         <link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi, I'm Nick Carter!</h1>
-				<p>I'm a graduate student majoring in Cybersecurity in the GVSU College of Computing.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="https://www.linkedin.com/in/nicholascartergv/">LinkedIn</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Nick Carter Website
+---
+<div class="blurb">
+	<h1>Nick Carter's Website</h1>
+	<p>Hi my name is Nick Carter, I am a graduate student at GVSU. I'm majoring in Cybersecurity in the College of Computing.</p>
+</div><!-- /.blurb -->
