Added more info to About page

--- a/about/index.html
+++ b/about/index.html
@@ -4,5 +4,12 @@ title: Nick Carter Website
 ---
 <div class="blurb">
 	<h1>About Nick</h1>
-	<p>Hi my name is Nick Carter, I am a graduate student at GVSU. I'm majoring in Cybersecurity in the College of Computing. </p>
+	<p>Hi my name is Nick Carter, I am a graduate student at GVSU. I'm majoring in Cybersecurity in the College of Computing. Some of my interests include:</p>
+    <ul>
+        <li>Soccer</li>
+        <li>Videogames</li>
+        <li>Movies</li>
+        <li>Coffee</li>
+    </ul>
+    <p>My favorite soccer team is Chelsea FC in the Premier League, I love playing big, open-world single player games, and I'm always game to go to the movie theater for any movie.</p>
 </div><!-- /.blurb -->
