screwed up the previous commit, this one adds the project page

--- a/641project/index.html
+++ b/641project/index.html
@@ -9,7 +9,7 @@ title: Nick Carter Website
         <li>Simple baseball diamond interface with stats and player names listed</li>
         <li>Stat-based, chance gameplay. Players can level up several different stats to increase the odds of specific game functions happening</li>
         <li>Authentication and save states to save your progress and pick up where you left off</li>
-        <li></li>
+        <li>Items that can be gained and used to increase statistical odds for certains gameplay functions</li>
     </ul>
-    <p>My favorite soccer team is Chelsea FC in the Premier League, I love playing big, open-world single player games, and I'm always game to go to the movie theater for any movie.</p>
+    <p>This project will reflect similar gameplay to that of Balatro or Slay the Spire, where the player will complete different "runs," level up their stats, and use items to try and win their current run. After each run, players will have gained information on strategies and stat increases that make their chances for the next run even better. This encapsulates the idea of a rougelike, but with a twist for all baseball enthusiasts.</p>
 </div><!-- /.blurb -->
