began technical background on about page

--- a/about/index.html
+++ b/about/index.html
@@ -12,4 +12,6 @@ title: Nick Carter Website
         <li>Coffee</li>
     </ul>
     <p>My favorite soccer team is Chelsea FC in the Premier League, I love playing big, open-world single player games, and I'm always game to go to the movie theater for any movie.</p>
+    <h2>Technical Background</h2>
+    <p></p>
 </div><!-- /.blurb -->
