fleshed out technical background on about page

--- a/about/index.html
+++ b/about/index.html
@@ -13,5 +13,22 @@ title: Nick Carter Website
     </ul>
     <p>My favorite soccer team is Chelsea FC in the Premier League, I love playing big, open-world single player games, and I'm always game to go to the movie theater for any movie.</p>
     <h2>Technical Background</h2>
-    <p></p>
+    <p>I have been studying cyber since I was a junior in high school (6 years now). Since then, I have completed my Bachelor's Degree in Cybersecurity at GVSU and am currently in my last semester of my Master's Degree in Cybersecurity. In my time of studies I have become proficient in the following:</p>
+    <h3><em>GVSU</em></h3>
+    <ul>
+        <li>Cyber Law and Compliance</li>
+        <li>Cyber Ethics</li>
+        <li>Java Programming</li>
+        <li>Malware Analysis</li>
+        <li>Kali Linux</li>
+    </ul>
+    <h3><em>Gordon Food Service</em></h3>
+    <p>I was lucky enough to carry out an internship at Gordon Food Service over summer 2024, where I gained valuable experience, and was able to continue working for them to the present day. The skills I developed at GFS included some of the following:</p>
+    <ul>
+        <li>Browser Security</li>
+        <li>Software Security Risk Assessments</li>
+        <li>Google Chrome Extension Analysis</li>
+        <li>Legal, Risk, and Compliance in the Food Industry</li>
+        <li>Overall Professional Development</li>
+    </ul>
 </div><!-- /.blurb -->
