added links to project repo

--- a/641project/index.html
+++ b/641project/index.html
@@ -11,5 +11,6 @@ title: Nick Carter Website
         <li>Authentication and save states to save your progress and pick up where you left off</li>
         <li>Items that can be gained and used to increase statistical odds for certains gameplay functions</li>
     </ul>
-    <p>This project will reflect similar gameplay to that of Balatro or Slay the Spire, where the player will complete different "runs," level up their stats, and use items to try and win their current run. After each run, players will have gained information on strategies and stat increases that make their chances for the next run even better. This encapsulates the idea of a rougelike, but with a twist for all baseball enthusiasts.</p>
+    <p>This project will reflect similar gameplay to that of Balatro or Slay the Spire, where the player will complete different "runs," level up their stats, and use items to try and win their current run. After each run, players will have gained information on strategies as well as stat increases that make their chances for the next run even better. This encapsulates the idea of a rougelike, but with a twist for all baseball enthusiasts.</p>
+    <p><em>To visit the project repo, click the following link: i-need-this-to-fork-the-repo-again.github.io</em></p>
 </div><!-- /.blurb -->
