fixed the default index file... I think

--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Nick Carter Website
+title: Nick Carter's Personal Website
 ---
 <div class="blurb">
 	<h1>About Nick</h1>
