--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Nick Carter Website
+title: Nick Carter's Personal Website
 ---
 <div class="blurb">
-	<h1>Nick Carter's Website</h1>
-	<p>Hi my name is Nick Carter, I am a graduate student at GVSU. I'm majoring in Cybersecurity in the College of Computing.</p>
+	<h1>Nick Carter's Personal Website</h1>
+	<p>Hi my name is Nick Carter, I am a graduate student at GVSU. I'm majoring in Cybersecurity in the College of Computing. Welcome to my website!</p>
 </div><!-- /.blurb -->
