--- a/641project/index.html
+++ b/641project/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Nick Carter Website
+title: Nick Carter's Personal Website
 ---
 <div class="blurb">
 	<h1>CIS 641 Semester Project Information</h1>
